trunk:
First working, stable version. @jers
Added installation instructions. @jers
Removed doxy documentation generation. @jers
Removed docs folder. @jers
Added a proper README - modified all of the CAPS files. @jers
Changed the INSTALL file. @jers
Removed the .htaccess_example - It is now a part of INSTALL. @jers
FroodParameters now implement Iterator @jers
